extends Control

func _on_Lv_1_pressed():
 get_tree().change_scene("res://Levels/Level 1.tscn")

func _on_Lv_2_pressed():
 get_tree().change_scene("res://Levels/Level 2.tscn")

func _on_Lv_3_pressed():
 get_tree().change_scene("res://Levels/Level 3.tscn")

func _on_Lv_4_pressed():
 get_tree().change_scene("res://Levels/Level 4.tscn")

func _on_Lv_5_pressed():
 get_tree().change_scene("res://Levels/Level 5.tscn")

func _on_Lv_6_pressed():
 get_tree().change_scene("res://Levels/Level 6.tscn")

func _on_Lv_7_pressed():
 get_tree().change_scene("res://Levels/Level 7.tscn")

func _on_Lv_8_pressed():
 get_tree().change_scene("res://Levels/Level 8.tscn")

func _on_Lv_9_pressed():
 get_tree().change_scene("res://Levels/Level 9.tscn")

func _on_Lv_10_pressed():
 get_tree().change_scene("res://Levels/Level 10.tscn")

func _on_Lv_11_pressed():
 get_tree().change_scene("res://Levels/Level 11.tscn")

func _on_Lv_12_pressed():
 get_tree().change_scene("res://Levels/Level 12.tscn")

func _on_Lv_13_pressed():
 get_tree().change_scene("res://Levels/Level 13.tscn")

func _on_Lv_14_pressed():
 get_tree().change_scene("res://Levels/Level 14.tscn")

func _on_Lv_15_pressed():
 get_tree().change_scene("res://Levels/Level 15.tscn")

func _on_Return_pressed():
 get_tree().change_scene("res://Levels/Main Menu.tscn")
